// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageCard renders standard card 1`] = `
<div
  className="container-block fAqlpH"
>
  <div
    className="dFmozA"
  >
    <img
      alt="image"
      className="jBczxc"
      src="http://localhost/img.png"
      title="image"
    />
    <div
      className="SkFY"
    />
  </div>
</div>
`;

exports[`ImageCard renders type = half 1`] = `
<div
  className="eSoyzx"
>
  <div
    className="container-block gueyww"
  >
    <img
      alt=""
      className="jBczxc"
      src="http://localhost/img.png"
      title=""
    />
  </div>
  <div
    className="bhUpna"
  >
    <span
      className="hctSdC"
    >
      <div
        className="text text--dark text--primary image-card__title--half hTwOaP"
        disabled={false}
        size={
          Object {
            "large": "hecto",
            "medium": "hecto",
            "small": "hecto",
          }
        }
      >
        <span
          className="hctSdC"
        >
          Title
        </span>
      </div>
    </span>
    <span
      className="iDMPFk"
    >
      <div
        className="text text--dark text--primary image-card__subtitle--half hTwOaP"
        disabled={false}
        size={
          Object {
            "large": "hecto",
            "medium": "hecto",
            "small": "hecto",
          }
        }
      >
        <span
          className="iDMPFk"
        >
          Sub Title
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`ImageCard renders with additional content when \`cardTitle\` and \`cardSubtitle\` prop values are not provided (old API support) 1`] = `
<div
  className="container-block fAqlpH"
>
  <div
    className="dFmozA"
  >
    <img
      alt=""
      className="jBczxc"
      src="http://localhost/img.png"
      title=""
    />
    <div
      className="SkFY"
    >
      <div
        className="fZvbHN"
      >
        <span
          className="hctSdC"
        >
          Title
        </span>
        <span
          className="iDMPFk"
        >
          Sub Title
        </span>
      </div>
    </div>
  </div>
  <div>
    Extra content
  </div>
</div>
`;

exports[`ImageCard renders with custom image 1`] = `
<div
  className="container-block fAqlpH"
>
  <div
    className="dFmozA"
  >
    <svg />
    <div
      className="SkFY"
    >
      <div
        className="fZvbHN"
      >
        <span
          className="hctSdC"
        >
          Title
        </span>
        <span
          className="iDMPFk"
        >
          Sub Title
        </span>
      </div>
    </div>
  </div>
  <div>
    Extra content
  </div>
</div>
`;

exports[`ImageCard renders with custom props 1`] = `
<div
  className="container-block fAqlpH"
>
  <div
    className="dFmozA"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <img
      alt=""
      className="jBczxc"
      src="http://localhost/img.png"
      title=""
    />
    <div
      className="SkFY"
      style={
        Object {
          "display": "none",
        }
      }
    >
      <div
        className="fZvbHN"
        style={
          Object {
            "display": "none",
          }
        }
      >
        <span
          className="hctSdC"
        >
          Title
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ImageCard renders with title & subtitle 1`] = `
<div
  className="container-block fAqlpH"
>
  <div
    className="dFmozA"
  >
    <img
      alt=""
      className="jBczxc"
      src="http://localhost/img.png"
      title=""
    />
    <div
      className="SkFY"
    >
      <div
        className="fZvbHN"
      >
        <span
          className="hctSdC"
        >
          Title
        </span>
        <span
          className="iDMPFk"
        >
          Sub Title
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ImageCard renders with title & subtitle, extra content 1`] = `
<div
  className="container-block fAqlpH"
>
  <div
    className="dFmozA"
  >
    <img
      alt=""
      className="jBczxc"
      src="http://localhost/img.png"
      title=""
    />
    <div
      className="SkFY"
    >
      <div
        className="fZvbHN"
      >
        <span
          className="hctSdC"
        >
          Title
        </span>
        <span
          className="iDMPFk"
        >
          Sub Title
        </span>
      </div>
    </div>
  </div>
  <div>
    Extra content
  </div>
</div>
`;
